[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/level.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/level_player.gd" type="Script" id=2]
[ext_resource path="res://editor/editor_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/star.tscn" type="PackedScene" id=4]

[sub_resource type="InputEventKey" id=1]
control = true
command = true
scancode = 90

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
shift = true
control = true
command = true
pressed = true
scancode = 90

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="level_player" type="Node"]
script = ExtResource( 2 )

[node name="gui" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="mouse_stop" type="Control" parent="gui"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_name" type="Label" parent="gui"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 24.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Level name"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="finished_popup" type="WindowDialog" parent="gui"]
margin_left = 252.0
margin_top = 141.0
margin_right = 978.0
margin_bottom = 520.0
popup_exclusive = true
window_title = "Level finished!"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="VBoxContainer" parent="gui/finished_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="congratulations" type="HBoxContainer" parent="gui/finished_popup/layout"]
margin_right = 706.0
margin_bottom = 14.0
alignment = 1

[node name="label_before" type="Label" parent="gui/finished_popup/layout/congratulations"]
margin_left = 178.0
margin_right = 467.0
margin_bottom = 14.0
text = "Congratulations! You have passed the level in"
align = 1

[node name="turns" type="Label" parent="gui/finished_popup/layout/congratulations"]
margin_left = 471.0
margin_right = 487.0
margin_bottom = 14.0
text = "10"
align = 1

[node name="label_after" type="Label" parent="gui/finished_popup/layout/congratulations"]
margin_left = 491.0
margin_right = 528.0
margin_bottom = 14.0
text = "turns!"
align = 1

[node name="filler" type="Control" parent="gui/finished_popup/layout"]
margin_top = 18.0
margin_right = 706.0
margin_bottom = 133.0
size_flags_vertical = 3

[node name="stars" type="HBoxContainer" parent="gui/finished_popup/layout"]
margin_top = 137.0
margin_right = 706.0
margin_bottom = 207.0
alignment = 1

[node name="star1" parent="gui/finished_popup/layout/stars" instance=ExtResource( 4 )]
margin_left = 244.0
margin_right = 314.0

[node name="star2" parent="gui/finished_popup/layout/stars" instance=ExtResource( 4 )]
margin_left = 318.0
margin_right = 388.0

[node name="star3" parent="gui/finished_popup/layout/stars" instance=ExtResource( 4 )]
margin_left = 392.0
margin_right = 462.0

[node name="stars_label" type="Label" parent="gui/finished_popup/layout"]
margin_top = 211.0
margin_right = 706.0
margin_bottom = 225.0
text = "Amazing!"
align = 1

[node name="filler2" type="Control" parent="gui/finished_popup/layout"]
margin_top = 229.0
margin_right = 706.0
margin_bottom = 344.0
size_flags_vertical = 3

[node name="options" type="HBoxContainer" parent="gui/finished_popup/layout"]
margin_top = 348.0
margin_right = 706.0
margin_bottom = 368.0

[node name="retry" type="Button" parent="gui/finished_popup/layout/options"]
margin_right = 232.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Retry"

[node name="menu" type="Button" parent="gui/finished_popup/layout/options"]
margin_left = 236.0
margin_right = 468.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Back to Menu"

[node name="next" type="Button" parent="gui/finished_popup/layout/options"]
margin_left = 472.0
margin_right = 706.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Next"

[node name="died_popup" type="WindowDialog" parent="gui"]
margin_left = 252.0
margin_top = 141.0
margin_right = 978.0
margin_bottom = 520.0
popup_exclusive = true
window_title = "Level failed!"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="VBoxContainer" parent="gui/died_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="gui/died_popup/layout"]
margin_right = 706.0
margin_bottom = 345.0
size_flags_vertical = 7
text = "Oh noes! You let Minilens die!"
align = 1
valign = 1

[node name="options" type="HBoxContainer" parent="gui/died_popup/layout"]
margin_top = 349.0
margin_right = 706.0
margin_bottom = 369.0

[node name="menu" type="Button" parent="gui/died_popup/layout/options"]
margin_right = 351.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Back to Menu"

[node name="retry" type="Button" parent="gui/died_popup/layout/options"]
margin_left = 355.0
margin_right = 706.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Retry"

[node name="undo" type="Button" parent="gui/died_popup/layout/options"]
margin_left = 355.0
margin_right = 706.0
margin_bottom = 20.0
size_flags_horizontal = 3
shortcut = SubResource( 2 )
text = "Undo last move"

[node name="actions_panel" type="PanelContainer" parent="gui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = 39.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="HBoxContainer" parent="gui/actions_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 194.0
margin_bottom = 27.0
alignment = 1

[node name="undo" type="Button" parent="gui/actions_panel/buttons"]
margin_right = 46.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 2 )
text = "Undo"

[node name="redo" type="Button" parent="gui/actions_panel/buttons"]
margin_left = 50.0
margin_right = 94.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 4 )
text = "Redo"

[node name="retry" type="Button" parent="gui/actions_panel/buttons"]
margin_left = 98.0
margin_right = 143.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 2 )
text = "Retry"

[node name="menu" type="Button" parent="gui/actions_panel/buttons"]
margin_left = 147.0
margin_right = 187.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"

[node name="counts" type="HBoxContainer" parent="gui"]
margin_left = 10.0
margin_top = 10.0
margin_right = 72.9748
margin_bottom = 26.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bombs" type="HBoxContainer" parent="gui/counts"]
margin_right = 61.0
margin_bottom = 16.0

[node name="label" type="Label" parent="gui/counts/bombs"]
margin_top = 1.0
margin_right = 49.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Bombs:"

[node name="value" type="Label" parent="gui/counts/bombs"]
margin_left = 53.0
margin_top = 1.0
margin_right = 61.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0"

[node name="turns" type="HBoxContainer" parent="gui/counts"]
margin_left = 70.0
margin_right = 121.0
margin_bottom = 16.0

[node name="label" type="Label" parent="gui/counts/turns"]
margin_top = 1.0
margin_right = 39.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Turns:"

[node name="value" type="Label" parent="gui/counts/turns"]
margin_left = 43.0
margin_top = 1.0
margin_right = 51.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0"

[node name="flowers" type="HBoxContainer" parent="gui/counts"]
margin_left = 130.0
margin_right = 195.0
margin_bottom = 16.0

[node name="label" type="Label" parent="gui/counts/flowers"]
margin_top = 1.0
margin_right = 53.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Flowers:"

[node name="value" type="Label" parent="gui/counts/flowers"]
margin_left = 57.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0"

[node name="barrels" type="HBoxContainer" parent="gui/counts"]
margin_left = 204.0
margin_right = 265.0
margin_bottom = 16.0

[node name="label" type="Label" parent="gui/counts/barrels"]
margin_top = 1.0
margin_right = 49.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Barrels:"

[node name="value" type="Label" parent="gui/counts/barrels"]
margin_left = 53.0
margin_top = 1.0
margin_right = 61.0
margin_bottom = 15.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "0"

[node name="level" parent="." instance=ExtResource( 1 )]

[node name="editor_camera" parent="." instance=ExtResource( 3 )]
[connection signal="gui_input" from="gui/mouse_stop" to="." method="process_input"]
[connection signal="pressed" from="gui/finished_popup/layout/options/retry" to="." method="retry"]
[connection signal="pressed" from="gui/finished_popup/layout/options/menu" to="." method="menu"]
[connection signal="pressed" from="gui/finished_popup/layout/options/next" to="." method="next"]
[connection signal="pressed" from="gui/died_popup/layout/options/menu" to="." method="menu"]
[connection signal="pressed" from="gui/died_popup/layout/options/retry" to="." method="retry"]
[connection signal="pressed" from="gui/died_popup/layout/options/undo" to="." method="undo"]
[connection signal="pressed" from="gui/actions_panel/buttons/undo" to="." method="undo"]
[connection signal="pressed" from="gui/actions_panel/buttons/redo" to="." method="redo"]
[connection signal="pressed" from="gui/actions_panel/buttons/retry" to="." method="retry"]
[connection signal="pressed" from="gui/actions_panel/buttons/menu" to="." method="menu"]
